	  client/gtk/Makefile.am, client/gtk/data/Makefile.am,
	  client/gtk/data/themes/Makefile.am,
	  client/gtk/data/themes/FreeCIV-like/Makefile.am,
	  client/gtk/data/themes/Iceland/Makefile.am,
	  client/gtk/data/themes/Tiny/Makefile.am, server/Makefile.am,
	  server/gtk/Makefile.am, common/gtk/Makefile.am: fix remaining
	  paths where data files are installed

2005-06-05  Brian Wellington <bwelling@xbill.org>
	* common/game.c, common/game.h, common/map.c, common/map.h,
	  editor/gtk/editor.c: Remove the chits field in the GameParams
	  structure.

2005-06-05  0.9.17  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Require GLib minimum version 2.4
	* common/log.h: Use glib/gi18n.h

2005-05-26  0.9.16  Roland Clobus <rclobus@bigfoot.com>
	* common/game.c, common/game.h: Constness for params_copy.
	* common/map.c (layout_chits), server/server.c (game_free),
	server/gtk/gnocatan-server-gtk.c (build_game_settings): Fixed memory
	leaks.
	* common/gtk/guimap.c: Implemented the todo in the single click
	building. The cursor will switch between node and edge, whichever is
	closest.
	
2005-05-25  Brian Wellington <bwelling@xbill.org>
	* client/common/client.c, server/pregame.c: Send the number
	of development cards that have been bought to connecting clients,
	so that the client's state is correct after a reconnect.

2005-05-22  Roland Clobus <rclobus@bigfoot.com>
	* apply 'make indent' again

2005-05-19  0.9.15  Roland Clobus <rclobus@bigfoot.com>
	* nearly all: replaced numElems and UNUSED macros by the GLib macros
	G_N_ELEMENTS and G_GNUC_UNUSED
	
2005-05-17  0.9.14  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/greedy.c (resource_desire): Fixed a typo from 0.9.13

2005-05-16  0.9.13  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/greedy.c (resource_desire): Don't consider resources that
	have no value (fixes monopoly deadlock)
	
2005-05-15  Brian Wellington <bwelling@xbill.org>
	* client/ai/greedy.c: Rework the AI's maritime trading code to