@@ -27,11 +27,11 @@ AM_CONFIG_HEADER(config.h)
  
 PROTOCOL_VERSION=0.9
 META_PROTOCOL_VERSION=1.2
-GNOCATAN_DEFAULT_GAME_PORT=5556
-GNOCATAN_DEFAULT_GAME_HOST=localhost
-GNOCATAN_DEFAULT_ADMIN_PORT=5555
-GNOCATAN_DEFAULT_META_PORT=5557
-GNOCATAN_DEFAULT_META_SERVER=pioneers.debian.net
+PIONEERS_DEFAULT_GAME_PORT=5556
+PIONEERS_DEFAULT_GAME_HOST=localhost
+PIONEERS_DEFAULT_ADMIN_PORT=5555
+PIONEERS_DEFAULT_META_PORT=5557
+PIONEERS_DEFAULT_META_SERVER=pioneers.debian.net
 
 GLIB_REQUIRED_VERSION=2.4
 GTK_REQUIRED_VERSION=2.4
@@ -147,16 +147,16 @@ AC_DEFINE_UNQUOTED(PROTOCOL_VERSION, "$PROTOCOL_VERSION",
                    [Protocol version used by the program])
 AC_DEFINE_UNQUOTED(META_PROTOCOL_VERSION, "$META_PROTOCOL_VERSION",
                    [Protocol version used by the meta server])
-AC_DEFINE_UNQUOTED(GNOCATAN_DEFAULT_GAME_PORT, "$GNOCATAN_DEFAULT_GAME_PORT",
+AC_DEFINE_UNQUOTED(PIONEERS_DEFAULT_GAME_PORT, "$PIONEERS_DEFAULT_GAME_PORT",
 	[The default port for a new game])
-AC_DEFINE_UNQUOTED(GNOCATAN_DEFAULT_GAME_HOST, "$GNOCATAN_DEFAULT_GAME_HOST",
+AC_DEFINE_UNQUOTED(PIONEERS_DEFAULT_GAME_HOST, "$PIONEERS_DEFAULT_GAME_HOST",
 	[The default host for a new game])
-AC_DEFINE_UNQUOTED(GNOCATAN_DEFAULT_ADMIN_PORT, "$GNOCATAN_DEFAULT_ADMIN_PORT",
+AC_DEFINE_UNQUOTED(PIONEERS_DEFAULT_ADMIN_PORT, "$PIONEERS_DEFAULT_ADMIN_PORT",
 	[The default port for the admin interface])
-AC_DEFINE_UNQUOTED(GNOCATAN_DEFAULT_META_PORT, "$GNOCATAN_DEFAULT_META_PORT",
+AC_DEFINE_UNQUOTED(PIONEERS_DEFAULT_META_PORT, "$PIONEERS_DEFAULT_META_PORT",
 	[The port for the meta server])
-AC_DEFINE_UNQUOTED(GNOCATAN_DEFAULT_META_SERVER, 
-	"$GNOCATAN_DEFAULT_META_SERVER", [The default meta server])
+AC_DEFINE_UNQUOTED(PIONEERS_DEFAULT_META_SERVER, 
+	"$PIONEERS_DEFAULT_META_SERVER", [The default meta server])
 
 ## internationalization support
 ALL_LINGUAS="de es fr nl it"
