@@ -4,7 +4,7 @@ use Time::Local;
 use Socket;
 
 $ENV{PATH} = '/bin:/usr/bin:/usr/sbin';
-my $server = $ARGV[1] || $ENV{'GNOCATAN_META_SERVER'} || 'pioneers.debian.net';
+my $server = $ARGV[1] || $ENV{'PIONEERS_META_SERVER'} || $ENV{'GNOCATAN_META_SERVER'} || 'pioneers.debian.net';
 my $iaddr = gethostbyname($server);
 my $meta_addr = sockaddr_in(5557, $iaddr);
 my $proto = getprotobyname('tcp');
